# ProgettoRTOS

./: .gitignore  .~lock.Progetto RTOS.docx#  CHANGES  CMakeLists.txt  Progetto RTOS.docx  README.md
esempio_ball_gtkmm_glade_allegro_opencv_ptask/: CMakeLists.txt  FrmMain.cpp  FrmMain.h  main.cpp
glade/: frmMain.glade  frmMain.glade~  frmSettings.glade  frmSettings.glade~
lib/: FrmMain.h  FrmSettings.h  image_processing.h  image_processing_gui.h  output_manager.h  thread_manager.h
src/: FrmMain.cpp  FrmSettings.cpp  camera.cpp  filter.cpp  frame_difference.cpp  gui.cpp  histogram.cpp  image_processing.cpp  main.cpp  output_manager.cpp  thread_manager.cpp  threshold.cpp
